--- a/lab11/lab11_1.Rmd
+++ b/lab11/lab11_1.Rmd
@@ -30,9 +30,9 @@ Please make sure that you have 1-2 data sets to share with your group member dur
 ## Install `RColorBrewer`, `paletteer`, and `ggthemes`
 `RColorBrewer` and `paletteer` are helpful in selecting palettes of color that work with your data. Please install these now, we will work with them in part 2 of today's lab.
 ```{r, eval=FALSE, echo=TRUE}
-install.packages("RColorBrewer")
-install.packages("paletteer")
-install.packages("ggthemes")
+#install.packages("RColorBrewer")
+#install.packages("paletteer")
+#install.packages("ggthemes")
 ```
 
 ## Load the libraries
@@ -85,7 +85,7 @@ deserts %>%
   summarise(n=n()) %>% 
   ggplot(aes(x=year, y=n, group=species_id, color=species_id))+
   geom_line()+
-  geom_point(shape=6)+
+  geom_point(shape=2)+
   theme(axis.text.x = element_text(angle = 60, hjust = 1))+
   labs(title = "Number of samples for species DM",
        x = "Year",
@@ -99,7 +99,7 @@ What does the distribution of body mass look like in the `homerange` data?
 ```{r}
 homerange %>% 
   ggplot(aes(x = log10.mass)) +
-  geom_histogram(alpha = 0.4, color = "black", fill = "darkturquoise", bins=40)+
+  geom_histogram(alpha = 0.4, color = "black", fill = "deepskyblue4", bins=40)+
   labs(title = "Distribution of Body Mass")
 ```
 
@@ -122,35 +122,24 @@ I like to see both the histogram and the density curve so I often plot them toge
 homerange %>% 
   ggplot(aes(x=log10.mass)) +
   geom_histogram(aes(y = ..density..), fill = "deepskyblue4", alpha = 0.4, color = "black")+
-  geom_density(color="red")+
+  geom_density(color = "red")+
   labs(title = "Distribution of Body Mass")
 ```
 
 ## Practice
 1. Make a histogram of `log10.hra`. Make sure to add a title.
 ```{r}
-homerange %>% 
-  ggplot(aes(x = log10.hra)) +
-  geom_histogram(alpha = 0.4, color = "black", fill = "salmon1", bins=40)+
-  labs(title = "Distribution of Homerange")
-  
+
 ```
 
 2. Now plot the same variable using `geom_density()`.
 ```{r}
-homerange %>% 
-  ggplot(aes(x = log10.hra)) +
-  geom_density(fill="yellow", alpha  =0.4, color = "black")+
-  labs(title = "Distribution of Homerange")
+
 ```
 
 3. Combine them both!
 ```{r}
-homerange %>% 
-  ggplot(aes(x = log10.hra)) +
-  geom_histogram(aes(y = ..density..), alpha = 0.4, color = "black", fill = "salmon1", bins=40)+
-   geom_density(color="purple")+
-  labs(title = "Distribution of Homerange")#alpha is transparency 
+
 ```
 
 ## Create Categories with mutate and case_when()
@@ -172,7 +161,9 @@ summary(homerange$log10.mass)
 
 ```{r}
 homerange <- homerange %>% 
-             mutate(mass_category = case_when(log10.mass <= 1.75 ~ "small",log10.mass > 1.75 & log10.mass <= 2.75 ~ "medium",log10.mass > 2.75 ~ "large"))
+             mutate(mass_category = case_when(log10.mass <= 1.75 ~ "small",
+                                              log10.mass > 1.75 & log10.mass <= 2.75 ~ "medium",
+                                              log10.mass > 2.75 ~ "large"))
 ```
 
 ```{r}
@@ -201,32 +192,15 @@ library(gtools)
 quartiles <- quantcut(homerange$log10.hra)
 table(quartiles)
 ```
-```{r}
-homerange <- homerange %>% 
-             mutate(range_category = case_when(log10.hra<3.6~ "very small", log10.hra >= 3.6 & log10.hra < 4.5 ~ "small",  log10.hra>= 4.5 & log10.hra< 6.0 ~ "medium",log10.hra >= 6.0 ~ "large"))
-```
 
 2. How many and which taxonomic classes are represented in each of the `range_category` classes?
 ```{r}
-homerange%>%
-  filter(range_category!= "NA")%>%
-  count(class, range_category)
-  
-```
-```{r}
-homerange%>%
-  ggplot(aes(x=range_category, fill=class))+
-           geom_bar(position="dodge", color="black", alpha= 0.6)+
-           labs(title= "observations by range in Homerange data", "Range Category", fill= "class")
+
 ```
 
 3. Isolate the small `range_category` and plot the range of `log10.mass` by taxonomic class.
 ```{r}
-homerange %>% 
-  filter(range_category=="small")%>%
-  ggplot(aes(x=class,y=log10.mass, fill=class)) +
-  geom_boxplot(alpha=0.6)
-  
+
 ```
 
 ## That's it! Take a break and I will see you on Zoom!  
